--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "node ./index.js"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^3.0.2",
